--- a/SHS-014-V/Src/Division.fx.yaml
+++ b/SHS-014-V/Src/Division.fx.yaml
@@ -396,7 +396,7 @@ Division As screen:
         Width: =App.Width-DivComp.VarMenuWidth
         X: =DivComp.VarMenuWidth
         Y: =DivComp.ComHeaderHeight
-        ZIndex: =4
+        ZIndex: =3
 
         Container27_3 As groupContainer.verticalAutoLayoutContainer:
             AlignInContainer: =AlignInContainer.SetByContainer
@@ -478,7 +478,7 @@ Division As screen:
         Width: =App.Width-DivComp.VarMenuWidth
         X: =DivComp.VarMenuWidth
         Y: =DivComp.ComHeaderHeight
-        ZIndex: =5
+        ZIndex: =4
 
         Container27_1 As groupContainer.verticalAutoLayoutContainer:
             AlignInContainer: =AlignInContainer.SetByContainer
@@ -974,7 +974,7 @@ Division As screen:
         Width: =App.Width-DivComp.VarMenuWidth
         X: =DivComp.VarMenuWidth
         Y: =DivComp.ComHeaderHeight
-        ZIndex: =6
+        ZIndex: =5
 
         Container27_2 As groupContainer.verticalAutoLayoutContainer:
             AlignInContainer: =AlignInContainer.SetByContainer
@@ -1468,6 +1468,35 @@ Division As screen:
                     Text: ="Cancel"
                     ZIndex: =2
 
+    Container14_9 As groupContainer.verticalAutoLayoutContainer:
+        Fill: =RGBA(255, 255, 255, 1)
+        Height: =569
+        LayoutAlignItems: =LayoutAlignItems.Center
+        LayoutDirection: =LayoutDirection.Vertical
+        LayoutJustifyContent: =LayoutJustifyContent.Center
+        LayoutMode: =LayoutMode.Auto
+        Visible: =If(Gallery6.AllItemsCount=0,true,false)
+        Width: =App.Width-DivComp.VarMenuWidth
+        X: =DivComp.VarMenuWidth
+        Y: =199
+        ZIndex: =6
+
+        Image8_17 As image:
+            Height: =200
+            Image: ='Not found'
+            Width: =200
+            ZIndex: =1
+
+        Label19_17 As label:
+            Align: =Align.Center
+            AlignInContainer: =AlignInContainer.Stretch
+            Color: =RGBA(255, 0, 0, 1)
+            FontWeight: =FontWeight.Bold
+            Height: =80
+            Size: =17
+            Text: ="No Matching Items Found"
+            ZIndex: =2
+
     AddFactor As groupContainer.verticalAutoLayoutContainer:
         DropShadow: =DropShadow.Regular
         Fill: =RGBA(33, 237, 227, 0.19)
@@ -1484,6 +1513,7 @@ Division As screen:
 
         Container27_37 As groupContainer.verticalAutoLayoutContainer:
             AlignInContainer: =AlignInContainer.SetByContainer
+            DropShadow: =DropShadow.Bold
             Fill: =RGBA(255, 255, 255, 1)
             FillPortions: =0
             Height: =550
@@ -1621,12 +1651,16 @@ Division As screen:
                 ZIndex: =4
 
                 Button4_6 As button:
+                    Fill: =RGBA(57, 184, 74, 1)
+                    HoverFill: =Self.Fill
                     OnSelect: |-
                         =SubmitForm(Form2_1);UpdateContext({varshoweditpopup:false});Notify("The division has been updated successfully",NotificationType.Success);ResetForm(Form2_1);
                     Text: ="Save"
                     ZIndex: =1
 
                 Button4_7 As button:
+                    Fill: =RGBA(57, 184, 74, 1)
+                    HoverFill: =Self.Fill
                     OnSelect: |-
                         =UpdateContext({AddFactor:false})
                     Text: ="Cancel"
