--- a/SHS-014-V/Src/Segment.fx.yaml
+++ b/SHS-014-V/Src/Segment.fx.yaml
@@ -14,12 +14,6 @@ Segment As screen:
         Y: =compSegment.ComHeaderHeight
         ZIndex: =2
 
-        Arrow2 As arrow.backArrow:
-            Height: =30
-            OnSelect: =Navigate(Administration)
-            Width: =30
-            ZIndex: =1
-
         "'Button&heading_1' As groupContainer.verticalAutoLayoutContainer":
             DropShadow: =DropShadow.None
             FillPortions: =0
@@ -70,6 +64,7 @@ Segment As screen:
                         BorderThickness: =1
                         Default: =""
                         DelayOutput: =true
+                        FocusedBorderThickness: =2
                         HintText: ="Search"
                         HoverBorderColor: =RGBA(0, 0, 0, 1)
                         HoverFill: =RGBA(255, 255, 255, 1)
@@ -99,7 +94,7 @@ Segment As screen:
                         OnSelect: =Set(search_name,"");Reset(TextInput1_1)
                         Visible: =If(IsBlank(TextInput1_1.Text),false,true)
                         Width: =28
-                        X: =202
+                        X: =210
                         Y: =27
                         ZIndex: =3
 
@@ -684,7 +679,7 @@ Segment As screen:
 
     Container14 As groupContainer.verticalAutoLayoutContainer:
         Fill: =RGBA(255, 255, 255, 1)
-        Height: =537
+        Height: =569
         LayoutAlignItems: =LayoutAlignItems.Center
         LayoutDirection: =LayoutDirection.Vertical
         LayoutJustifyContent: =LayoutJustifyContent.Center
@@ -694,7 +689,7 @@ Segment As screen:
             =
             App.Width-compSegment.VarMenuWidth
         X: =compSegment.VarMenuWidth
-        Y: =231
+        Y: =199
         ZIndex: =5
 
         Image8 As image:
