--- a/SHS-014-V/Src/For Admin Action.fx.yaml
+++ b/SHS-014-V/Src/For Admin Action.fx.yaml
@@ -2027,7 +2027,9 @@
                 
                 Clear(ValueofId);
                 UpdateContext({Resetcheckbox: true});
-                Reset(Checkbox2_2)
+                Reset(Checkbox2_2);
+                
+                UpdateContext({rejectpopup: false});
             Text: ="Confirm"
             Width: =210
             X: =832
