--- a/SHS-014-V/Src/All Study.fx.yaml
+++ b/SHS-014-V/Src/All Study.fx.yaml
@@ -22,7 +22,7 @@
             LayoutMinWidth: =250
             LayoutMode: =LayoutMode.Auto
             Width: =Parent.Width
-            ZIndex: =3
+            ZIndex: =2
 
             Container26_27 As groupContainer.horizontalAutoLayoutContainer:
                 DropShadow: =DropShadow.None
@@ -50,7 +50,7 @@
                 LayoutMinHeight: =80
                 LayoutMinWidth: =150
                 LayoutMode: =LayoutMode.Auto
-                ZIndex: =2
+                ZIndex: =3
 
                 Container25_30 As groupContainer.manualLayoutContainer:
                     DropShadow: =DropShadow.None
@@ -66,6 +66,8 @@
                         BorderThickness: =1
                         Default: =""
                         DelayOutput: =true
+                        FocusedBorderThickness: |
+                            =2
                         HintText: ="Search"
                         HoverBorderColor: =RGBA(0, 0, 0, 1)
                         HoverFill: =RGBA(255, 255, 255, 1)
@@ -75,7 +77,7 @@
                         RadiusTopLeft: =0
                         RadiusTopRight: =0
                         Width: =248
-                        X: =12
+                        X: =22
                         Y: =20
                         ZIndex: =1
 
@@ -159,7 +161,7 @@
             LayoutMinWidth: =250
             LayoutMode: =LayoutMode.Auto
             Width: =Parent.Width
-            ZIndex: =4
+            ZIndex: =3
 
             Container28_50 As groupContainer.horizontalAutoLayoutContainer:
                 AlignInContainer: =AlignInContainer.SetByContainer
@@ -292,7 +294,7 @@
             LayoutMinWidth: =250
             LayoutMode: =LayoutMode.Auto
             Width: =Parent.Width
-            ZIndex: =5
+            ZIndex: =4
 
             Gallery_study_13 As gallery.galleryVertical:
                 DelayItemLoading: =true
