--- a/SHS-014-V/Src/For Admin Action.fx.yaml
+++ b/SHS-014-V/Src/For Admin Action.fx.yaml
@@ -551,13 +551,13 @@
                     ZIndex: =1
 
                     Icon27_1 As icon.Reload:
-                        Color: =RGBA(45, 128, 40, 1)
-                        Height: =32
+                        Color: =RGBA(2, 14, 242, 1)
+                        Height: =22
                         Icon: =Icon.Reload
                         OnSelect: =Refresh('Initiative List')
-                        Width: =36
-                        X: =300
-                        Y: =24
+                        Width: =24
+                        X: =316
+                        Y: =30
                         ZIndex: =1
 
                 Container25_56 As groupContainer.manualLayoutContainer:
@@ -668,7 +668,7 @@
                 LayoutMinHeight: =80
                 LayoutMinWidth: =250
                 LayoutMode: =LayoutMode.Auto
-                ZIndex: =1
+                ZIndex: =2
 
                 Label28_1 As label:
                     FontWeight: =FontWeight.Bold
@@ -685,7 +685,7 @@
                 LayoutMinHeight: =80
                 LayoutMinWidth: =250
                 LayoutMode: =LayoutMode.Auto
-                ZIndex: =2
+                ZIndex: =3
 
                 Container25_57 As groupContainer.manualLayoutContainer:
                     DropShadow: =DropShadow.None
@@ -750,6 +750,24 @@
                             Text: ="Reject"
                             Width: =Parent.Width
                             ZIndex: =1
+
+            Container58 As groupContainer.horizontalAutoLayoutContainer:
+                DropShadow: =DropShadow.None
+                FillPortions: =0
+                LayoutMinHeight: =100
+                LayoutMinWidth: =250
+                LayoutMode: =LayoutMode.Auto
+                Width: =20
+                ZIndex: =4
+
+        Container57 As groupContainer.horizontalAutoLayoutContainer:
+            DropShadow: =DropShadow.None
+            FillPortions: =0
+            Height: =20
+            LayoutMinHeight: =100
+            LayoutMinWidth: =250
+            LayoutMode: =LayoutMode.Auto
+            ZIndex: =3
 
         Header_question_7 As groupContainer.horizontalAutoLayoutContainer:
             AlignInContainer: =AlignInContainer.SetByContainer
