--- a/SHS-014-V/Src/Options.fx.yaml
+++ b/SHS-014-V/Src/Options.fx.yaml
@@ -15,13 +15,6 @@ Options As screen:
         Y: =compOptions.ComHeaderHeight
         ZIndex: =2
 
-        Arrow2_5 As arrow.backArrow:
-            AlignInContainer: =AlignInContainer.Start
-            Height: =30
-            OnSelect: =Navigate(Administration)
-            Width: =30
-            ZIndex: =1
-
         "'Button&heading_6' As groupContainer.verticalAutoLayoutContainer":
             AlignInContainer: =AlignInContainer.SetByContainer
             DropShadow: =DropShadow.None
@@ -53,11 +46,13 @@ Options As screen:
 
             Container27_19 As groupContainer.horizontalAutoLayoutContainer:
                 DropShadow: =DropShadow.None
+                FillPortions: =0
                 Height: =Parent.Height
                 LayoutGap: =10
                 LayoutMinHeight: =80
                 LayoutMinWidth: =250
                 LayoutMode: =LayoutMode.Auto
+                Width: =550
                 ZIndex: =2
 
                 Container25_15 As groupContainer.manualLayoutContainer:
@@ -71,6 +66,7 @@ Options As screen:
                         BorderThickness: =1
                         Default: =""
                         DelayOutput: =true
+                        FocusedBorderThickness: =2
                         HintText: ="Search"
                         HoverBorderColor: =RGBA(0, 0, 0, 1)
                         HoverFill: =RGBA(255, 255, 255, 1)
@@ -826,8 +822,9 @@ Options As screen:
                     ZIndex: =2
 
     notfound_option As groupContainer.verticalAutoLayoutContainer:
+        DropShadow: =DropShadow.None
         Fill: =RGBA(255, 255, 255, 1)
-        Height: =537
+        Height: =567
         LayoutAlignItems: =LayoutAlignItems.Center
         LayoutDirection: =LayoutDirection.Vertical
         LayoutJustifyContent: =LayoutJustifyContent.Center
@@ -835,7 +832,7 @@ Options As screen:
         Visible: =If(Gallery_options.AllItemsCount=0,true,false)
         Width: =App.Width-compOptions.VarMenuWidth
         X: =compOptions.VarMenuWidth
-        Y: =231
+        Y: =201
         ZIndex: =5
 
         Image8_5 As image:
@@ -851,6 +848,7 @@ Options As screen:
             Height: =80
             Size: =17
             Text: ="No Matching Items Found"
+            Width: =350
             ZIndex: =2
 
     "'Add Popup_Options' As groupContainer.verticalAutoLayoutContainer":
